--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "capstone-project"
 version = "0.1.0"
 description = ""
 authors = ["Tokurah"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -10,6 +11,7 @@ django = "*"
 djangorestframework = "*"
 gunicorn = "*"
 whitenoise = "*"
+Pillow = "*"
 
 [build-system]
 requires = ["poetry-core"]
